compile_box/API/temp/55a5cb5a8ef569be1466/errors
  File "/usercode/file.py", line 1
    print 'Hello!'a
                  ^
SyntaxError: invalid syntax
